# hackernews-simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.tape  demo.webm  pyproject.toml  streamlit_app.py
.beast-plan/pending-1774018569/: CONTEXT.md
.beast-plan/pending-1774022928/: CONTEXT.md  state.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omc/sessions/: 3cd36ae3-6222-47fc-bf9c-f4dbe24157fd.json
.omc/state/: agent-replay-3cd36ae3-6222-47fc-bf9c-f4dbe24157fd.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
docs/meta-prediction/: best-prediction.txt
scripts/: build_features.py  build_index.py  fetch_data.py  train_model.py
src/hackernews_simulator/: artifacts.py  cli.py  compare.py  config.py  rich_output.py  simulator.py  suggest.py
src/hackernews_simulator/comments/: __init__.py  (+2 more)
src/hn_simulator/: claude_runner.py  cli.py  compare.py  config.py  simulator.py  suggest.py
tests/: conftest.py  test_artifacts.py  test_backtest.py  test_calibrate.py  test_cli.py  test_compare.py  test_config.py  test_domain_features.py  test_explain.py  test_feature_pipeline.py  test_fetch.py  test_generate_comments.py  test_integration.py  test_labels.py  test_multiclass.py  test_predict.py  test_preprocess.py  test_prompts.py  test_rag_index.py  test_rag_retrieve.py  test_rich_output.py  test_simulator.py  test_streamlit_app.py  test_structural_features.py  test_suggest.py  test_text_features.py  test_train.py
(+27 files in other folders)
