[project]
name = "hackernews-simulator"
version = "0.1.0"
description = "Predict Hacker News community reaction to a project pitch"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "sentence-transformers>=3.0.0",
    "lightgbm>=4.0.0",
    "lancedb>=0.15.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "shap>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
ui = [
    "streamlit>=1.35.0",
]

[project.scripts]
hn-sim = "hackernews_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackernews_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (loads real models or hits network)",
]
